force-app/main/default/objects/API_Callout_Audit__c/API_Callout_Audit__c.object-meta.xml
<CustomObject>
    <label>API Callout Audit</label>
    <nameField>
        <displayFormat>ACA-{00000}</displayFormat>
        <label>API Callout Audit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Callout Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>