force-app/main/default/objects/API_Callout_Audit__c/fields/Apex_Action__c.field-meta.xml
<CustomField>
    <fullName>Apex_Action__c</fullName>
    <label>Apex Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>