force-app/main/default/objects/API_Callout_Audit__c/fields/Is_New_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_New_Flow</label>
    <type>Checkbox</type>
</CustomField>