force-app/main/default/objects/API_Callout_Audit__c/fields/NoofRecordFailed__c.field-meta.xml
<CustomField>
    <fullName>NoofRecordFailed__c</fullName>
    <label>NoofRecordFailed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>