force-app/main/default/objects/API_Callout_Audit__c/fields/NoofRecordSuccessed__c.field-meta.xml
<CustomField>
    <fullName>NoofRecordSuccessed__c</fullName>
    <label>NoofRecordSuccessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>