force-app/main/default/objects/API_Callout_Audit__c/fields/Process_Attribute_Details__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Attribute Details</label>
    <referenceTo>Process_Attribute_Details__c</referenceTo>
    <relationshipLabel>API Callout Audit</relationshipLabel>
    <relationshipName>API_Callout_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>