force-app/main/default/objects/API_Callout_Audit__c/fields/Response_Proccessing_DML_Result__c.field-meta.xml
<CustomField>
    <fullName>Response_Proccessing_DML_Result__c</fullName>
    <label>Response Proccessing DML Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>