force-app/main/default/objects/API_Callout_Audit__c/fields/Task_Custom__c.field-meta.xml
<CustomField>
    <fullName>Task_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Custom</label>
    <referenceTo>Task_Custom__c</referenceTo>
    <relationshipLabel>API Callout Audit</relationshipLabel>
    <relationshipName>API_Callout_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>