force-app/main/default/objects/API_Callout_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <columns>Task_ID__c</columns>
    <columns>Task_Custom__c</columns>
    <columns>API_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>